# lp_solver_edge_density

./: CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile.sh  lp_solver  main.cpp  temp
src/: c4_finder.cpp  main.cpp  mainFull.cpp  mainMin.cpp  mainMin_basic.cpp  main_no8.cpp
